// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 kTyYdK"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX"
    >
      <label
        class="StyledText-sc-1sadyjn-0 lPqQk"
      >
        Some input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 gySsHC FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bDhrKg"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 bxDqkG"
            disabled=""
            value="Hi people"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 kTyYdK"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 lkmfGs FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bDhrKg"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 iIgwzP"
            value="Hi people"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 kTyYdK"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX"
    >
      <label
        class="StyledText-sc-1sadyjn-0 lPqQk"
      >
        Some input
      </label>
      <span
        class="StyledText-sc-1sadyjn-0 cTuErc"
      >
        This is a very cool input
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 lkmfGs FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bDhrKg"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 iIgwzP"
            value="Hi people"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput renders an input with a label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 kTyYdK"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX"
    >
      <label
        class="StyledText-sc-1sadyjn-0 lPqQk"
      >
        Some input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 lkmfGs FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bDhrKg"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 iIgwzP"
            value="Hi people"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 kTyYdK"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX"
    >
      <label
        class="StyledText-sc-1sadyjn-0 lPqQk"
      >
        Some input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 ftAoiI FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bDhrKg"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 iIgwzP"
            value="Hi people"
          />
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 boCmmO"
      >
        You failed at this
      </span>
    </div>
  </div>
</div>
`;

exports[`TextInput renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 kTyYdK"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX"
    >
      <label
        class="StyledText-sc-1sadyjn-0 lPqQk"
      >
        Some input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 lkmfGs FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bDhrKg"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 iIgwzP"
            value="Hi people"
          />
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 kwoXLv"
      >
        You can set a cool value
      </span>
    </div>
  </div>
</div>
`;
